--- a/css/slides.css
+++ b/css/slides.css
@@ -1464,6 +1464,7 @@ section .form-column {
 	color: #32325d;
 	font-size: 14px;
 	margin-bottom: 5px;
+	margin-left: 5px;
 }
 
 .hs-form-booleancheckbox-display span {
@@ -1471,14 +1472,14 @@ section .form-column {
 	margin-left: 5px;
 }
 
-#bokaskanska input[type="radio"] {
-	margin-top: 15px !important;
-	margin-left: -7px !important;
-
-}
-
 .formBackground span {
 	float: none;
+	font-weight: bold;
+	margin-left: 5px;
+}
+
+.hs-form-field {
+	margin: 10px 0px 10px 0px;
 }
 
 .hs-input {
@@ -1510,6 +1511,7 @@ section .form-column {
 		rgba(60, 66, 87, 0.12) 0px 2px 5px 0px;
 	min-width: 19px;
 	width: 30px;
+	margin-left: -8px;
 }
 
 .formBackground .actions {
