Reversed order of job description and form on career

--- a/css/slides.css
+++ b/css/slides.css
@@ -1326,6 +1326,11 @@ section .form-column {
 	padding-right: 0;
 }
 
+#career .secondary-column> :first-child {
+	padding-left: 50px;
+	padding-right: 30px;
+}
+
 .customers {
 	-webkit-box-align: normal;
 	-ms-flex-align: normal;
@@ -2654,6 +2659,11 @@ section.ctas .cta .cta-headline {
 }
 
 @media only screen and (min-width:320px) and (max-width:480px) {
+	#career .secondary-column> :first-child {
+		padding-left: 8px;
+		padding-right: 8px;
+	}
+
 	.inputs-list {
 		display: block;
 
