--- a/css/slides.css
+++ b/css/slides.css
@@ -1284,6 +1284,21 @@ a.globalFooterCard {
 	border-bottom: 1px solid #fff;
 }
 
+.pad-header {
+	background-color: #F6F9FC;
+	width: 100%;
+	padding: 15px 0 15px 0;
+	border-bottom: 1px solid #e3e8ee;
+	background: #fff;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.form-bg-offset {
+	padding: 24px 18px 20px 24px;
+	background-color: #f7fafc;
+}
+
 .form-section {
 	padding: 50px 0 40px 0;
 	position: relative;
@@ -1373,8 +1388,7 @@ section .form-column {
 	margin: 0 30px 20px 0;
 }
 
-
-.formBackground {
+.padheader .formBackground {
 	border-radius: 4px;
 	-webkit-box-shadow: 0 50px 100px rgba(50, 50, 93, .1), 0 15px 35px rgba(50, 50, 93, .15), 0 5px 15px rgba(0, 0, 0, .1);
 	box-shadow: 0 50px 100px rgba(50, 50, 93, .1), 0 15px 35px rgba(50, 50, 93, .15), 0 5px 15px rgba(0, 0, 0, .1);
@@ -3830,12 +3844,6 @@ p.micro {
 	box-shadow: 0 50px 100px rgba(50, 50, 93, .1), 0 15px 35px rgba(50, 50, 93, .15), 0 5px 15px rgba(0, 0, 0, .1);
 }
 
-.pad-header {
-	background-color: #F6F9FC;
-	width: 100%;
-	padding: 15px 0 15px 0;
-}
-
 .container-md {
 	height: 460px !important
 }
@@ -4063,6 +4071,10 @@ body {
 
 .margin-top-1 {
 	margin-top: 10% !important
+}
+
+.margin-top-10 {
+	margin-top: 100px;
 }
 
 .margin-bottom-1 {
