Skanska/boka header updated

--- a/css/slides.css
+++ b/css/slides.css
@@ -4077,6 +4077,10 @@ body {
 	margin-top: 100px;
 }
 
+.margin-top-8 {
+	margin-top: 80px;
+}
+
 .margin-bottom-1 {
 	margin-bottom: 10px !important
 }
