--- a/css/slides.css
+++ b/css/slides.css
@@ -408,6 +408,7 @@ a.globalFooterCard {
 .common-Card img {
 	border-radius: 4px;
 	height: 100%;
+	width: 100%;
 	max-height: 277px;
 	object-fit: cover;
 }
