--- a/css/slides.css
+++ b/css/slides.css
@@ -487,7 +487,13 @@ a.globalFooterCard {
 	text-align: center;
 	position: absolute;
 }
-
+.hr-line {
+	position: relative;
+    -webkit-box-flex: 1;
+    flex: 1 1 auto;
+    height: 1px;
+    background-color: #b8c2cc;
+}
 #steg p {
 	font-size: 16px;
 }
