--- a/css/slides.css
+++ b/css/slides.css
@@ -493,6 +493,10 @@ a.globalFooterCard {
     height: 1px;
     background-color: #b8c2cc;
 }
+#consultIntro img {
+	max-width: 640px;
+
+}
 #steg p {
 	font-size: 16px;
 }
@@ -2563,6 +2567,8 @@ section.ctas .cta .cta-headline {
 }
 
 @media only screen and (min-width:320px) and (max-width:480px) {
+	#consultIntro img {
+	max-width: 320px !important;}
 	.inputs-list {
 		display: grid;
 	}
