--- a/css/slides.css
+++ b/css/slides.css
@@ -2019,6 +2019,12 @@ section.ctas .cta .cta-headline {
 	margin-bottom: 40px;
 }
 
+.news-list-scrollable {
+	width: 100%;
+	height: 600px; 
+	overflow-y: auto;
+}
+
 .news-list .list span {
 	grid-column: 2;
 	transition: color .1s;
