--- a/css/slides.css
+++ b/css/slides.css
@@ -2012,14 +2012,24 @@ section.ctas .cta .cta-headline {
 	margin-bottom: 40px;
 }
 .news-list .list {
-	max-height: 500px;
+	max-height: 900px;
     height: 100%;
     overflow-y: scroll;
 }
+
 .news-list .list span iframe {
 	margin-top: 16px;
 	margin-bottom: 16px;
 	min-height: 300px;
+}
+
+@media screen and (max-width: 600px) {
+	.news-list .list span iframe {
+		margin-top: 16px;
+		margin-bottom: 16px;
+		min-height: 300px;
+		max-height: 400px;
+	}
 }
 
 .news-list .list span {
